@@ -432,6 +432,7 @@ AC_OUTPUT(
  bindings/python/Makefile
  bindings/perl5/Makefile
  bindings/guile/Makefile
+ bindings/tcl8/Makefile
 ,
  if test -r docs/mkdoc.pl ; then chmod +x docs/mkdoc.pl ; fi
  if test -r tests/stemtest.pl ; then chmod +x tests/stemtest.pl ; fi
